--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [IDENTIFICATION]
 # Set your user agent string here.
-USERAGENT = IR UW26 33996391 30594246 22992373
+USERAGENT = IR UW26 33996391 30594246 22992373 94932735
 
 [CONNECTION]
 HOST = styx.ics.uci.edu
